# YTDownloaderGUI

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/config/: KategorijaPesmi.json  KategorijeVidejev.json  ZanraPesmi.json
src/: app.rs  main.rs  structs.rs
src/DeliZaslona/: central_panel.rs  menu_bar.rs  mod.rs
src/Funkcionalnost/: mod.rs  podatki_video.rs  prenesi_audio.rs  prenesi_video.rs  skupno.rs
