[package]
name = "YTDownloaderGUI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
eframe = { version = "0.20.1", features = ["persistence"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
image = "0.24.5"
serde_json = "1.0.91"
dark-light = "1.0.0"