[package]
name = "YTDownloaderGUI"
version = "1.0.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", features = ["persistence"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] } # App persistence
image = "0.24.5"
serde_json = "1"
dark-light = "1.0.0"
rfd = "0.11"
regex = "1.7.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"